// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrubbableInput snapshots should render ScrubbableInput 1`] = `
<DocumentFragment>
  <div
    class="ScrubbableInput"
    data-test-scrubbable-input=""
  >
    <span>
      child
    </span>
  </div>
</DocumentFragment>
`;

exports[`ScrubbableInput snapshots should render with icon 1`] = `
<DocumentFragment>
  <div
    class="ScrubbableInput"
    data-test-scrubbable-input=""
  >
    <span>
      child
    </span>
    <div
      class="ScrubbableInput__handler Icon Icon--neutral-1"
      data-test-icon="ew-resize"
      height="14"
      name="EWResize"
      style="left: 0px; top: 0px;"
      width="25"
    />
  </div>
</DocumentFragment>
`;
